# hello-agents

./: .gitignore  01_MemoryTool_Basic_Operations.py  11_Q&A_Assistant.py  my_llm.py  my_llm扩展记录.md  my_main.py  pyproject.toml  test.py
.claude/: settings.local.json
agents/: react_agent.py  reflection_agent.py  simple_agent.py
core/: message.py  my_llm.py
docs/: qdrant_store_explained.md
memory/: embedding.py
memory/rag/: pipeline.py
memory/storage/: qdrant_store.py
memory/types/: __init__.py  semantic.py  working.py
memory_data/: memory.db
model_cache/models--spacy--zh_core_web_sm/refs/: main
src/hello_agents/: __init__.py
src/hello_agents/agents/: context_agent.py  plan_solve_agent.py  react_agent.py  simple_agent.py  test_react_agent.py  test_reflection_agent.py  test_simple_agent.py
src/hello_agents/context/: builder.py
src/hello_agents/core/: agent.py  config.py  my_llm.py
src/hello_agents/memory/: __init__.py  base.py  manager.py
src/hello_agents/memory/rag/: __init__.py  pipeline.py
src/hello_agents/memory/storage/: __init__.py  qdrant_store.py
src/hello_agents/memory/types/: episodic.py  perceptual.py
src/hello_agents/protocols/a2a/: implementation.py
src/hello_agents/tools/: base.py  chain.py  registry.py
src/hello_agents/tools/buildtin/: calculator.py  mcp_wrapper_tool.py  memory_tool.py  note_tool.py  protocol_tools.py  terminal_tool.py
tools/: registry.py
tools/buildtin/: rag_tool.py  search.py
weather-mcp-server/: Dockerfile  pyproject.toml  requirements.txt  smithery.yaml
